10/27/16
  -Added .Close() to close the session with the PLC. Whenever a script is done
    .Close() should be called.

10/26/16
  -Added _getBytes() for sending/receiving data.  Should handle failure better
  -Rewrote _connect() to handle disconnect/reconnects better

08/17/16
  -Fixed tagIOI not dealing with greater than 4 byte tag index

08/05/16
  -Fixed derp with calling _getTagList

07/29/16
  -Fixed writing to boolean array

07/27/16
  -Fixed defaulting to element zero when writing to an array value

07/09/16
  -Added CIP error messages, fixed looking at wrong byte for error
  -Fixed single bool from array write

07/07/16
  -.discover() returns .IPAddress instead of .Address
  -Moved some code from _parseIdentityResponse() to lgxDevice.py to simplify function
  -Fixed issue with some devices failing to parse
  -Better filtering discovered devices

06/15/16
  -Added GetTagList() to retreive the controller scope tags

06/14/16
  -Added Discover() to query all of the Ethernet I/P devices on the network.

06/09/16
  -Added multi-read function back in, also GetPLCTime()
  -Fixed writing strings

06/08/16
  -Fixed multi-dim read's, array reads.  Write functions now working

06/07/16
  -Rewrite eip.py.  Trying to make it easier to use, only Read functions work for now

04/07/16
  -Modified identify.py to get rid of the functions for the lists

03/04/16
  -Fixed issue reading array only returning first element
  
02/25/16
  -more mods to identify.py, made it more pythonic with JordanCClark's suggestions
  -try without binding if looping through ipv4 addreses doesn't return anything

02/22/16
  -identify.py now sends packet out each network adapter

12/11/15
  -Fixed incorrect vendorID's in identify.py
  -Filter out garbage from GetTagList
  -Added MultiRead() function

11/28/15
  -Renamed SetIPAddress to IPAddress and SetProcessorSlot to ProcessorSlot
  -Updated README with identify.py info

11/27/15